archive/0.10/_sources/examples/index.rst.txt


.. raw:: html

    <style type="text/css">
    .figure {
        position: relative;
        float: left;
        margin: 10px;
        width: 180px;
        height: 200px;
    }

    .figure img {
        position: absolute;
        display: inline;
        left: 0;
        width: 170px;
        height: 170px;
        opacity:1.0;
        filter:alpha(opacity=100); /* For IE8 and earlier */
    }

    .figure:hover img {
        -webkit-filter: blur(3px);
        -moz-filter: blur(3px);
        -o-filter: blur(3px);
        -ms-filter: blur(3px);
        filter: blur(3px);
        opacity:1.0;
        filter:alpha(opacity=100); /* For IE8 and earlier */
    }

    .figure span {
        position: absolute;
        display: inline;
        left: 0;
        width: 170px;
        height: 170px;
        background: #000;
        color: #fff;
        visibility: hidden;
        opacity: 0;
        z-index: 100;
    }

    .figure p {
        position: absolute;
        top: 45%;
        width: 170px;
        font-size: 110%;
    }

    .figure:hover span {
        visibility: visible;
        opacity: .4;
    }

    .caption {
        position: absolue;
        width: 180px;
        top: 170px;
        text-align: center !important;
    }
    </style>

.. _example_gallery:

Example gallery
===============



.. toctree::
   :hidden:

   ./anscombes_quartet

   ./color_palettes

   ./cubehelix_palette

   ./different_scatter_variables

   ./distplot_options

   ./errorband_lineplots

   ./facet_projections

   ./faceted_histogram

   ./faceted_lineplot

   ./grouped_barplot

   ./grouped_boxplot

   ./grouped_violinplots

   ./heatmap_annotation

   ./hexbin_marginals

   ./horizontal_barplot

   ./horizontal_boxplot

   ./jitter_stripplot

   ./joint_kde

   ./kde_ridgeplot

   ./large_distributions

   ./logistic_regression

   ./many_facets

   ./many_pairwise_correlations

   ./marginal_ticks

   ./multiple_joint_kde

   ./multiple_regression

   ./pair_grid_with_kde

   ./paired_pointplots

   ./pairgrid_dotplot

   ./pointplot_anova

   ./regression_marginals

   ./residplot

   ./scatter_bubbles

   ./scatterplot_categorical

   ./scatterplot_matrix

   ./scatterplot_sizes

   ./simple_violinplots

   ./structured_heatmap

   ./wide_data_lineplot

   ./wide_form_violinplot





.. raw:: html

    <div class='figure align-center'>
    <a href=./anscombes_quartet.html>
    <img src=../_static/anscombes_quartet_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>lmplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./color_palettes.html>
    <img src=../_static/color_palettes_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>barplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./cubehelix_palette.html>
    <img src=../_static/cubehelix_palette_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>kdeplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./different_scatter_variables.html>
    <img src=../_static/different_scatter_variables_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>scatterplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./distplot_options.html>
    <img src=../_static/distplot_options_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>distplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./errorband_lineplots.html>
    <img src=../_static/errorband_lineplots_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>lineplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./facet_projections.html>
    <img src=../_static/facet_projections_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>FacetGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./faceted_histogram.html>
    <img src=../_static/faceted_histogram_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>FacetGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./faceted_lineplot.html>
    <img src=../_static/faceted_lineplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>relplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./grouped_barplot.html>
    <img src=../_static/grouped_barplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>catplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./grouped_boxplot.html>
    <img src=../_static/grouped_boxplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>boxplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./grouped_violinplots.html>
    <img src=../_static/grouped_violinplots_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>violinplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./heatmap_annotation.html>
    <img src=../_static/heatmap_annotation_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>heatmap</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./hexbin_marginals.html>
    <img src=../_static/hexbin_marginals_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>jointplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./horizontal_barplot.html>
    <img src=../_static/horizontal_barplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>barplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./horizontal_boxplot.html>
    <img src=../_static/horizontal_boxplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>boxplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./jitter_stripplot.html>
    <img src=../_static/jitter_stripplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>stripplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./joint_kde.html>
    <img src=../_static/joint_kde_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>jointplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./kde_ridgeplot.html>
    <img src=../_static/kde_ridgeplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>FacetGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./large_distributions.html>
    <img src=../_static/large_distributions_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>boxenplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./logistic_regression.html>
    <img src=../_static/logistic_regression_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>lmplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./many_facets.html>
    <img src=../_static/many_facets_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>FacetGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./many_pairwise_correlations.html>
    <img src=../_static/many_pairwise_correlations_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>heatmap</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./marginal_ticks.html>
    <img src=../_static/marginal_ticks_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>JointGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./multiple_joint_kde.html>
    <img src=../_static/multiple_joint_kde_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>kdeplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./multiple_regression.html>
    <img src=../_static/multiple_regression_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>lmplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./pair_grid_with_kde.html>
    <img src=../_static/pair_grid_with_kde_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>PairGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./paired_pointplots.html>
    <img src=../_static/paired_pointplots_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>PairGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./pairgrid_dotplot.html>
    <img src=../_static/pairgrid_dotplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>PairGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./pointplot_anova.html>
    <img src=../_static/pointplot_anova_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>catplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./regression_marginals.html>
    <img src=../_static/regression_marginals_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>jointplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./residplot.html>
    <img src=../_static/residplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>residplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./scatter_bubbles.html>
    <img src=../_static/scatter_bubbles_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>relplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./scatterplot_categorical.html>
    <img src=../_static/scatterplot_categorical_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>swarmplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./scatterplot_matrix.html>
    <img src=../_static/scatterplot_matrix_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>pairplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./scatterplot_sizes.html>
    <img src=../_static/scatterplot_sizes_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>scatterplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./simple_violinplots.html>
    <img src=../_static/simple_violinplots_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>violinplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./structured_heatmap.html>
    <img src=../_static/structured_heatmap_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>clustermap</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./wide_data_lineplot.html>
    <img src=../_static/wide_data_lineplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>lineplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='figure align-center'>
    <a href=./wide_form_violinplot.html>
    <img src=../_static/wide_form_violinplot_thumb.png?v=0.11.1>
    <span class='figure-label'>
    <p>violinplot</p>
    </span>
    </a>
    </div>





.. raw:: html

    <div style="clear: both"></div>
