archive/0.12/_sources/examples/index.rst.txt

:html_theme.sidebar_secondary.remove:

.. raw:: html

    <style type="text/css">
    .thumb {
        position: relative;
        float: left;
        width: 180px;
        height: 180px;
        margin: 0;
    }

    .thumb img {
        position: absolute;
        display: inline;
        left: 0;
        width: 170px;
        height: 170px;
        opacity:1.0;
        filter:alpha(opacity=100); /* For IE8 and earlier */
    }

    .thumb:hover img {
        -webkit-filter: blur(3px);
        -moz-filter: blur(3px);
        -o-filter: blur(3px);
        -ms-filter: blur(3px);
        filter: blur(3px);
        opacity:1.0;
        filter:alpha(opacity=100); /* For IE8 and earlier */
    }

    .thumb span {
        position: absolute;
        display: inline;
        left: 0;
        width: 170px;
        height: 170px;
        background: #000;
        color: #fff;
        visibility: hidden;
        opacity: 0;
        z-index: 100;
    }

    .thumb p {
        position: absolute;
        top: 45%;
        width: 170px;
        font-size: 110%;
        color: #fff;
    }

    .thumb:hover span {
        visibility: visible;
        opacity: .4;
    }

    .caption {
        position: absolute;
        width: 180px;
        top: 170px;
        text-align: center !important;
    }
    </style>

.. _example_gallery:

Example gallery
===============



.. toctree::
   :hidden:

   ./anscombes_quartet

   ./different_scatter_variables

   ./errorband_lineplots

   ./faceted_histogram

   ./faceted_lineplot

   ./grouped_barplot

   ./grouped_boxplot

   ./grouped_violinplots

   ./heat_scatter

   ./hexbin_marginals

   ./histogram_stacked

   ./horizontal_boxplot

   ./jitter_stripplot

   ./joint_histogram

   ./joint_kde

   ./kde_ridgeplot

   ./large_distributions

   ./layered_bivariate_plot

   ./logistic_regression

   ./many_facets

   ./many_pairwise_correlations

   ./marginal_ticks

   ./multiple_bivariate_kde

   ./multiple_conditional_kde

   ./multiple_ecdf

   ./multiple_regression

   ./pair_grid_with_kde

   ./paired_pointplots

   ./pairgrid_dotplot

   ./palette_choices

   ./palette_generation

   ./part_whole_bars

   ./pointplot_anova

   ./radial_facets

   ./regression_marginals

   ./residplot

   ./scatter_bubbles

   ./scatterplot_categorical

   ./scatterplot_matrix

   ./scatterplot_sizes

   ./simple_violinplots

   ./smooth_bivariate_kde

   ./spreadsheet_heatmap

   ./strip_regplot

   ./structured_heatmap

   ./three_variable_histogram

   ./timeseries_facets

   ./wide_data_lineplot

   ./wide_form_violinplot





.. raw:: html

    <div class='thumb align-center'>
    <a href=./anscombes_quartet.html>
    <img src=../_static/anscombes_quartet_thumb.png>
    <span class='thumb-label'>
    <p>lmplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./different_scatter_variables.html>
    <img src=../_static/different_scatter_variables_thumb.png>
    <span class='thumb-label'>
    <p>scatterplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./errorband_lineplots.html>
    <img src=../_static/errorband_lineplots_thumb.png>
    <span class='thumb-label'>
    <p>lineplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./faceted_histogram.html>
    <img src=../_static/faceted_histogram_thumb.png>
    <span class='thumb-label'>
    <p>displot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./faceted_lineplot.html>
    <img src=../_static/faceted_lineplot_thumb.png>
    <span class='thumb-label'>
    <p>relplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./grouped_barplot.html>
    <img src=../_static/grouped_barplot_thumb.png>
    <span class='thumb-label'>
    <p>catplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./grouped_boxplot.html>
    <img src=../_static/grouped_boxplot_thumb.png>
    <span class='thumb-label'>
    <p>boxplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./grouped_violinplots.html>
    <img src=../_static/grouped_violinplots_thumb.png>
    <span class='thumb-label'>
    <p>violinplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./heat_scatter.html>
    <img src=../_static/heat_scatter_thumb.png>
    <span class='thumb-label'>
    <p>relplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./hexbin_marginals.html>
    <img src=../_static/hexbin_marginals_thumb.png>
    <span class='thumb-label'>
    <p>jointplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./histogram_stacked.html>
    <img src=../_static/histogram_stacked_thumb.png>
    <span class='thumb-label'>
    <p>histplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./horizontal_boxplot.html>
    <img src=../_static/horizontal_boxplot_thumb.png>
    <span class='thumb-label'>
    <p>boxplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./jitter_stripplot.html>
    <img src=../_static/jitter_stripplot_thumb.png>
    <span class='thumb-label'>
    <p>stripplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./joint_histogram.html>
    <img src=../_static/joint_histogram_thumb.png>
    <span class='thumb-label'>
    <p>JointGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./joint_kde.html>
    <img src=../_static/joint_kde_thumb.png>
    <span class='thumb-label'>
    <p>jointplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./kde_ridgeplot.html>
    <img src=../_static/kde_ridgeplot_thumb.png>
    <span class='thumb-label'>
    <p>FacetGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./large_distributions.html>
    <img src=../_static/large_distributions_thumb.png>
    <span class='thumb-label'>
    <p>boxenplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./layered_bivariate_plot.html>
    <img src=../_static/layered_bivariate_plot_thumb.png>
    <span class='thumb-label'>
    <p>scatterplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./logistic_regression.html>
    <img src=../_static/logistic_regression_thumb.png>
    <span class='thumb-label'>
    <p>lmplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./many_facets.html>
    <img src=../_static/many_facets_thumb.png>
    <span class='thumb-label'>
    <p>FacetGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./many_pairwise_correlations.html>
    <img src=../_static/many_pairwise_correlations_thumb.png>
    <span class='thumb-label'>
    <p>heatmap</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./marginal_ticks.html>
    <img src=../_static/marginal_ticks_thumb.png>
    <span class='thumb-label'>
    <p>JointGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./multiple_bivariate_kde.html>
    <img src=../_static/multiple_bivariate_kde_thumb.png>
    <span class='thumb-label'>
    <p>kdeplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./multiple_conditional_kde.html>
    <img src=../_static/multiple_conditional_kde_thumb.png>
    <span class='thumb-label'>
    <p>displot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./multiple_ecdf.html>
    <img src=../_static/multiple_ecdf_thumb.png>
    <span class='thumb-label'>
    <p>displot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./multiple_regression.html>
    <img src=../_static/multiple_regression_thumb.png>
    <span class='thumb-label'>
    <p>lmplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./pair_grid_with_kde.html>
    <img src=../_static/pair_grid_with_kde_thumb.png>
    <span class='thumb-label'>
    <p>PairGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./paired_pointplots.html>
    <img src=../_static/paired_pointplots_thumb.png>
    <span class='thumb-label'>
    <p>PairGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./pairgrid_dotplot.html>
    <img src=../_static/pairgrid_dotplot_thumb.png>
    <span class='thumb-label'>
    <p>PairGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./palette_choices.html>
    <img src=../_static/palette_choices_thumb.png>
    <span class='thumb-label'>
    <p>barplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./palette_generation.html>
    <img src=../_static/palette_generation_thumb.png>
    <span class='thumb-label'>
    <p>kdeplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./part_whole_bars.html>
    <img src=../_static/part_whole_bars_thumb.png>
    <span class='thumb-label'>
    <p>barplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./pointplot_anova.html>
    <img src=../_static/pointplot_anova_thumb.png>
    <span class='thumb-label'>
    <p>catplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./radial_facets.html>
    <img src=../_static/radial_facets_thumb.png>
    <span class='thumb-label'>
    <p>FacetGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./regression_marginals.html>
    <img src=../_static/regression_marginals_thumb.png>
    <span class='thumb-label'>
    <p>jointplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./residplot.html>
    <img src=../_static/residplot_thumb.png>
    <span class='thumb-label'>
    <p>residplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./scatter_bubbles.html>
    <img src=../_static/scatter_bubbles_thumb.png>
    <span class='thumb-label'>
    <p>relplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./scatterplot_categorical.html>
    <img src=../_static/scatterplot_categorical_thumb.png>
    <span class='thumb-label'>
    <p>swarmplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./scatterplot_matrix.html>
    <img src=../_static/scatterplot_matrix_thumb.png>
    <span class='thumb-label'>
    <p>pairplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./scatterplot_sizes.html>
    <img src=../_static/scatterplot_sizes_thumb.png>
    <span class='thumb-label'>
    <p>relplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./simple_violinplots.html>
    <img src=../_static/simple_violinplots_thumb.png>
    <span class='thumb-label'>
    <p>violinplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./smooth_bivariate_kde.html>
    <img src=../_static/smooth_bivariate_kde_thumb.png>
    <span class='thumb-label'>
    <p>JointGrid</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./spreadsheet_heatmap.html>
    <img src=../_static/spreadsheet_heatmap_thumb.png>
    <span class='thumb-label'>
    <p>heatmap</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./strip_regplot.html>
    <img src=../_static/strip_regplot_thumb.png>
    <span class='thumb-label'>
    <p>catplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./structured_heatmap.html>
    <img src=../_static/structured_heatmap_thumb.png>
    <span class='thumb-label'>
    <p>clustermap</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./three_variable_histogram.html>
    <img src=../_static/three_variable_histogram_thumb.png>
    <span class='thumb-label'>
    <p>displot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./timeseries_facets.html>
    <img src=../_static/timeseries_facets_thumb.png>
    <span class='thumb-label'>
    <p>relplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./wide_data_lineplot.html>
    <img src=../_static/wide_data_lineplot_thumb.png>
    <span class='thumb-label'>
    <p>lineplot</p>
    </span>
    </a>
    </div>



.. raw:: html

    <div class='thumb align-center'>
    <a href=./wide_form_violinplot.html>
    <img src=../_static/wide_form_violinplot_thumb.png>
    <span class='thumb-label'>
    <p>violinplot</p>
    </span>
    </a>
    </div>





.. raw:: html

    <div style="clear: both"></div>
